--- a/src/Components/Instagram.css
+++ b/src/Components/Instagram.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 1440px;
+  width: 1920px;
+  /* height: 3234px; */
   background-color: #fafafa;
 }
 
