--- a/src/Components/ProfileDetails/ProfileDetails.css
+++ b/src/Components/ProfileDetails/ProfileDetails.css
@@ -1,3 +1,10 @@
+.profile-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .profile-container {
   display: flex;
   justify-content: center;
@@ -19,7 +26,8 @@
   align-items: center;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 291.67px;
+  height: 100%;
   flex-grow: 1;
   margin-right: 30px;
 }
@@ -42,10 +50,15 @@
 
 .profile {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   flex-direction: column;
   width: 613.34px;
+
+  width: 100%;
+  height: 100%;
+  flex-basis: 30px;
+  flex-grow: 2;
 }
 
 .profile-details {
