--- a/src/Components/StatusItems/StatusItems.css
+++ b/src/Components/StatusItems/StatusItems.css
@@ -1,37 +1,31 @@
-/* .status-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto auto auto auto auto;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, sans-serif;
-}
-
-.status-display {
-  display: grid;
+.slide {
+  display: flex;
   align-items: center;
   justify-content: center;
   padding: 10px 15px;
   width: 125px;
   height: 130px;
   cursor: pointer;
+
 }
 
 .status-image {
-  display: grid;
+  display: flex;
   align-items: center;
   justify-content: center;
   border: 2px solid #dbdbdb;
-  height: 85px;
-  width: 85px;
-  border-radius: 50%;
-  margin: 0;
+  height: 87px;
+  width: 87px;
+  border-radius: 100%;
+  margin: auto;
   padding: 0;
+
 }
 
 .status-pic {
   border-radius: 50%;
+  width: 77px;
+  height: 77px;
 }
 
 .username {
@@ -41,4 +35,29 @@
   font-size: 14px;
   line-height: 18px;
   color: #262626;
-} */
+  text-align: center;
+}
+
+.circle {
+  position: absolute;
+  top: 45%;
+  right: 100%;
+  height: 24px;
+  width: 24px;
+  color: rgb(125, 125, 125);
+  opacity: 0.7;
+  line-height: 18px;
+  cursor: pointer;
+}
+
+.chevron {
+  position: absolute;
+  top: 45%;
+  left: 99%;
+  height: 24px;
+  width: 24px;
+  color: rgb(125, 125, 125);
+  opacity: 0.7;
+  line-height: 18px;
+  cursor: pointer;
+}
