--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,27 @@ display: flex;
 justify-content: center;
 align-items: center;
 }
+
+.instagram-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 1920px;
+  /* height: 3234px; */
+  background-color: #fafafa;
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+  margin: 60px auto 30px;
+  max-width: 935px;
+  margin-bottom: 0;
+  box-sizing: content-box;
+  /* width: calc(100% - 40px); */
+  padding: 30px 20px 0;
+}
