--- a/src/Components/Modal/PostModal.css
+++ b/src/Components/Modal/PostModal.css
@@ -1,4 +1,14 @@
-.modal{
+.modal-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 1440px;
+  height: 100%;
+}
+
+.modal {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -6,26 +16,25 @@
   width: 526px;
   max-width: 855px;
   min-width: 348px;
-height: 526px;
-align-items: stretch;
-border: 0 solid #000;
-box-sizing: border-box;
-border-radius: 8px;
-border: 1px solid;
-border-color: transparent;
+  height: 526px;
+  align-items: stretch;
+  box-sizing: border-box;
+  border-radius: 8px;
+  background-color: #ffffff;
+  border: 0 solid black;
 }
 
-.modal-header{
+.modal-header {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid;
-  /* height: 43px; */
+  border-bottom: 1px solid #dbdbdb;
+  height: 43px;
   width: 100%;
   flex-grow: 1;
 }
 
-.modal-head{
+.modal-head {
   font-size: 16px;
   font-weight: 600;
   line-height: 24px;
@@ -33,8 +42,7 @@ border-color: transparent;
   text-align: center;
 }
 
-
-.modal-content{
+.modal-content {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -44,10 +52,10 @@ border-color: transparent;
   padding-bottom: 24px;
   padding-top: 24px;
   padding-left: 24px;
-padding-right: 24px;
+  padding-right: 24px;
 }
 
-.modal-title{
+.modal-title {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,15 +66,14 @@ padding-right: 24px;
   margin-top: 16px;
   flex: 0 0 auto;
   width: 270.5px;
- height:  26px;
+  height: 26px;
 }
 
-
-.modal-text{
+.modal-text {
   font-weight: 300;
 }
 
-.modal-button{
+.modal-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -75,17 +82,16 @@ padding-right: 24px;
   width: 175.117px;
   height: 38px;
 
-padding-bottom: 4px;
-padding-top: 4px;
-padding-left: 4px;
-padding-right: 4px;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
-  
 
-.modal-btn{
- width: 167.117px;
- height: 30px;
- 
+.modal-btn {
+  width: 167.117px;
+  height: 30px;
+
   background-color: #0095f6;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -93,12 +99,12 @@ padding-right: 4px;
   border: 0;
   box-sizing: border-box;
   cursor: pointer;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+    Arial, sans-serif;
   font-size: 14px;
   font-weight: 600;
   padding: 5px 9px;
   text-align: center;
-width: 100%;
-line-height: 18px;
-
+  width: 100%;
+  line-height: 18px;
 }
