--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,6 +1,5 @@
 .navigation-container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   /* padding: 0px 50px; */
@@ -50,6 +49,11 @@
   padding: 0;
   flex: 0 0 auto;
   cursor: pointer;
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
+  margin-top: 7px;
+  transition: opacity 0.1s ease-out;
 }
 
 .search-input-container {
@@ -95,21 +99,22 @@
 
 .icons-container {
   display: flex;
+  align-items: center;
   margin-left: 50px;
   width: 300px;
   justify-content: space-evenly;
   transition: height 0.2s ease-in-out;
   cursor: pointer;
-
-  flex-shrink: 0;
   margin: 0;
   padding: 0;
   margin-left: 22px;
   padding-left: 24px;
-  white-space: nowrap;
 }
 
-.icons {
+.upload-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 100%;
   margin-left: 22px;
 }
-
