--- a/src/Components/Modal/PostModal.css
+++ b/src/Components/Modal/PostModal.css
@@ -9,7 +9,6 @@
   position: fixed;
   left: 0;
   background: rgba(8, 7, 7, 0.3);
-  z-index: 999;
 }
 
 .close-icon {
@@ -49,12 +48,39 @@
 
 .modal-header {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #dbdbdb;
   height: 43px;
   width: 100%;
   flex-grow: 1;
+}
+
+.back-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  border: 0;
+  height: 100%;
+  padding: 8px;
+}
+
+.back-icon {
+  border: 0;
+  cursor: pointer;
+  font-size: 14px;
+  padding: 5px 9px;
+  text-align: center;
+  width: auto;
+  height: 100%;
+}
+
+.head-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .modal-head {
@@ -65,6 +91,34 @@
   text-align: center;
 }
 
+.submit-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  font-size: 100%;
+  margin: 0;
+  flex-shrink: 0;
+  border: 0;
+  flex-basis: 48px;
+  height: 100%;
+  padding: 8px;
+}
+
+.submit-text {
+  -webkit-appearance: none;
+  background: 0 0;
+  border: 0;
+  cursor: pointer;
+  display: block;
+  font-size: 14px;
+  padding: 5px 9px;
+  text-align: center;
+  width: auto;
+  color: #0095f6;
+  font-weight: 600;
+}
+
 .modal-content {
   display: flex;
   justify-content: center;
@@ -72,6 +126,21 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
+  position: relative;
+}
+
+.copy-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+  font-size: 18px;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  background-color: rgba(10, 0, 0, 0.5);
 }
 
 .image-content {
@@ -101,6 +170,15 @@
   min-height: 391px;
   max-height: 898px;
   height: 526px;
+}
+
+.modal-header2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #dbdbdb;
+  height: 43px;
+  width: 100%;
 }
 
 .modal-file {
@@ -153,7 +231,6 @@
   /* width: 167.117px; */
   width: 100%;
   height: 30px;
-
   background-color: #0095f6;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -173,4 +250,82 @@
 
 .custom-file-input {
   display: none;
+}
+
+.copy-modal {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  position: relative;
+  border: 0;
+  font-size: 100%;
+  margin: 0;
+  flex: 0 0 auto;
+  width: 180px;
+  height: 118px;
+  padding: 8px;
+  border-radius: 8px;
+  background: rgba(8, 7, 7, 0.3);
+}
+
+.copy-modal2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  position: relative;
+  border: 0;
+  font-size: 100%;
+  margin: 0;
+  flex: 0 0 auto;
+  width: 286px;
+  height: 118px;
+  padding: 8px;
+  border-radius: 8px;
+  background: rgba(8, 7, 7, 0.3);
+}
+
+.copy-image-body {
+  display: flex;
+  cursor: pointer;
+  text-align: center;
+  flex-shrink: 0;
+  border: 0;
+  font-size: 100%;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  margin: 0 6px;
+}
+
+.copy-image {
+  flex-shrink: 0;
+  height: 94px;
+  width: 94px;
+}
+
+.plus-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  height: 100%;
+  margin: 0 4px 0 6px;
+  width: auto;
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
+  border: 1px solid #dbdbdb;
+  border-radius: 50%;
+  height: 48px;
+  width: 48px;
+  margin: 0 6px;
+  cursor: pointer;
+}
+
+.copy-contents {
+  position: absolute;
+  bottom: 10%;
+  right: 20px;
 }
