added discard modal

--- a/src/Components/Modal/PostModal.css
+++ b/src/Components/Modal/PostModal.css
@@ -8,7 +8,7 @@
   background-color: #575757;
   position: fixed;
   left: 0;
-  background: rgba(8, 7, 7, 0.3);
+  background: rgba(37, 37, 37, 0.95);
 }
 
 .close-icon {
@@ -34,11 +34,12 @@
   font-size: 100%;
   margin: 0;
   padding: 0;
-  width: 375px;
+  /* width: 375px; */
   min-width: 348px;
   min-height: 391px;
   max-height: 898px;
   height: 526px;
+  width: 391px;
   position: fixed;
   top: 10%;
   left: 50%;
@@ -60,20 +61,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 0;
-  border: 0;
-  height: 100%;
-  padding: 8px;
+  margin-left: 8px;
 }
 
 .back-icon {
   border: 0;
   cursor: pointer;
   font-size: 14px;
-  padding: 5px 9px;
   text-align: center;
   width: auto;
   height: 100%;
+  line-height: 18px;
+  padding: 8px;
 }
 
 .head-container {
@@ -87,36 +86,30 @@
   font-size: 16px;
   font-weight: 600;
   line-height: 24px;
-  min-width: 0;
   text-align: center;
+  width: 100%;
 }
 
-.submit-container {
+.next-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 0;
-  font-size: 100%;
-  margin: 0;
-  flex-shrink: 0;
-  border: 0;
-  flex-basis: 48px;
   height: 100%;
-  padding: 8px;
+  margin-right: 8px;
 }
 
-.submit-text {
+.next-text {
   -webkit-appearance: none;
   background: 0 0;
   border: 0;
   cursor: pointer;
-  display: block;
   font-size: 14px;
-  padding: 5px 9px;
+  /* padding: 5px 9px; */
   text-align: center;
   width: auto;
   color: #0095f6;
   font-weight: 600;
+  padding: 8px;
 }
 
 .modal-content {
@@ -124,9 +117,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  align-items: stretch;
   height: 100%;
   width: 100%;
-  position: relative;
+  position: fixed;
 }
 
 .copy-container {
@@ -156,20 +150,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  align-items: stretch;
-  box-sizing: border-box;
   border-radius: 8px;
   background-color: #ffffff;
   border: 0 solid black;
-  pointer-events: all;
   font-size: 100%;
   margin: 0;
   padding: 0;
-  width: 375px;
-  min-width: 348px;
-  min-height: 391px;
-  max-height: 898px;
-  height: 526px;
+  width: 100%;
+  height: 100%;
 }
 
 .modal-header2 {
@@ -220,11 +208,7 @@
   flex: 0 0 auto;
   width: 175.117px;
   height: 38px;
-
-  padding-bottom: 4px;
-  padding-top: 4px;
-  padding-left: 4px;
-  padding-right: 4px;
+  padding: 4px;
 }
 
 .modal-btn {
@@ -236,10 +220,7 @@
   border-radius: 4px;
   color: #fff;
   border: 0;
-  box-sizing: border-box;
   cursor: pointer;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
   font-size: 14px;
   font-weight: 600;
   padding: 5px 9px;
