--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -69,13 +69,12 @@
   font-size: 16px;
   font-weight: 300;
   background-color: #efefef;
-  border: 1px solid rgba(0, 0, 0, 0.0975);
+  border: 1px solid #dbdbdb;
   border-radius: 8px;
   padding: 0 16px;
   height: 36px;
   width: 268px;
   cursor: text;
-  z-index: 2;
 }
 
 .FaSearch {
