--- a/src/Components/Modal/Next.css
+++ b/src/Components/Modal/Next.css
@@ -1,3 +1,10 @@
+.modal_next-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
 .modal_next-content {
   display: flex;
   flex-direction: column;
@@ -7,12 +14,8 @@
   background-color: #ffffff;
   border: 0 solid black;
   font-size: 100%;
-  height: 526px;
+  height: 451px;
   width: 792px;
-  position: fixed;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, 0);
 }
 
 .modal_next-header {
@@ -20,9 +23,10 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #dbdbdb;
-  height: 100%;
+  height: 43px;
   width: 100%;
-  flex-grow: 1;
+  /* flex-grow: 1; */
+  line-height: 24px;
 }
 
 .filter-container {
@@ -30,7 +34,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 400px;
 }
 
 .filter_adjustments-container {
@@ -39,41 +43,55 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  width: 100%;
+  width: 339px;
+  color: rgba(var(--i1d, 38, 38, 38), 1);
+
+  border: 0 solid #000;
+  flex-shrink: 0;
+  margin: 0;
+  padding: 0;
+  border-left: 1px solid rgba(var(--b6a, 219, 219, 219), 1);
+  opacity: 1;
+  /* flex: 1 1 auto; */
 }
 
 .modal-filter {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* width: 100%;
-  height: 100%; */
+  width: 100%;
+  flex-direction: row;
+  width: 339px;
+}
+
+.filter-holder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  line-height: 24px;
+  flex: 1;
+  font-size: 16px;
+  padding: 14px 0;
+  border-bottom: 1px solid #dbdbdb;
 }
 
 .filter {
   font-weight: 600;
   transition: opacity 250ms ease-in-out;
-  border-bottom: 1px solid #dbdbdb;
-  flex: 1;
-  font-size: 16px;
-  line-height: 24px;
-  padding: 14px 0;
+
   text-transform: capitalize;
   opacity: 1;
+  text-align: center;
 }
 
 .adjustment {
   color: rgba(38, 38, 38, 0.5);
   font-weight: 600;
   transition: opacity 250ms ease-in-out;
-  border-bottom: solid 1px rgba(38, 38, 38, 0.5);
-  display: flex;
-  flex: 1;
-  justify-content: center;
+  /* border-bottom: solid 1px rgba(38, 38, 38, 0.5); */
   opacity: 0.3;
-  font-size: 16px;
-  line-height: 24px;
-  padding: 14px 0;
+  text-align: center;
   text-transform: capitalize;
 }
 
@@ -83,9 +101,12 @@
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
-  height: 100%;
-  gap: 20px;
-overflow-y: scroll;
+  height: 524px;
+  overflow-y: scroll;
+  color: rgba(38, 38, 38, 0.5);
+
+  border: 0 solid #000;
+  margin-top: 8px;
 }
 
 .filter-image {
@@ -93,11 +114,25 @@ overflow-y: scroll;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  border: 2px solid transparent;
+  margin-bottom: 8px;
+  margin-left: 8px;
+  margin-right: 8px;
+  overflow: hidden;
   cursor: pointer;
 }
 
 .modal-image {
   height: 88px;
   width: 88px;
-  cursor: pointer;
+  border-radius: 4px;
+}
+
+.filter-text {
+  font-size: 12px;
+  line-height: 16px;
+  margin: 2px 0 3px;
+  font-weight: 600;
+  color: #28a0f7;
+  display: block;
 }
